bioconductor-0213/products-in/kunpeng1/install/CancerInSilico.install-out.txt
##############################################################################
##############################################################################
###
### Running command:
###
###   /home/biocbuild/bbs-3.17-bioc/R/bin/R CMD INSTALL CancerInSilico
###
##############################################################################
##############################################################################


* installing to library ‘/home/biocbuild/bbs-3.17-bioc/R/library’
* installing *source* package ‘CancerInSilico’ ...
** using staged installation
** libs
using C++ compiler: ‘g++ (Ubuntu 11.3.0-1ubuntu1~22.04) 11.3.0’
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c RunModel.cpp -o RunModel.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c CellModels/DrasdoHohmeModel.cpp -o CellModels/DrasdoHohmeModel.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c OffLatticeModel/OffLatticeCell.cpp -o OffLatticeModel/OffLatticeCell.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c OffLatticeModel/OffLatticeCellBasedModel.cpp -o OffLatticeModel/OffLatticeCellBasedModel.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c OffLatticeModel/OffLatticeRadiusSolver.cpp -o OffLatticeModel/OffLatticeRadiusSolver.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c Core/Cell.cpp -o Core/Cell.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c Core/CellBasedModel.cpp -o Core/CellBasedModel.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c Core/CellType.cpp -o Core/CellType.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c Core/Drug.cpp -o Core/Drug.o
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c Core/Random.cpp -o Core/Random.o
In file included from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/aux_/na_assert.hpp:23,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/arg.hpp:25,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/placeholders.hpp:24,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/iterator/iterator_categories.hpp:16,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/iterator/iterator_concepts.hpp:10,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/range/concepts.hpp:20,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/range/size_type.hpp:20,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/range/size.hpp:21,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/random/hyperexponential_distribution.hpp:29,
                 from /home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/random.hpp:70,
                 from Core/Random.cpp:3:
/home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/assert.hpp:194:21: warning: unnecessary parentheses in declaration of ‘assert_arg’ [-Wparentheses]
  194 | failed ************ (Pred::************
      |                     ^~~~~~~~~~~~~~~~~~~
  195 |       assert_arg( void (*)(Pred), typename assert_arg_pred<Pred>::type )
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  196 |     );
      |     ~                
/home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/assert.hpp:194:21: note: remove parentheses
  194 | failed ************ (Pred::************
      |                     ^~~~~~~~~~~~~~~~~~~
      |                     -
  195 |       assert_arg( void (*)(Pred), typename assert_arg_pred<Pred>::type )
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  196 |     );
      |     ~                
      |     -
/home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/assert.hpp:199:21: warning: unnecessary parentheses in declaration of ‘assert_not_arg’ [-Wparentheses]
  199 | failed ************ (boost::mpl::not_<Pred>::************
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  200 |       assert_not_arg( void (*)(Pred), typename assert_arg_pred_not<Pred>::type )
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  201 |     );
      |     ~                
/home/biocbuild/bbs-3.17-bioc/R/library/BH/include/boost/mpl/assert.hpp:199:21: note: remove parentheses
  199 | failed ************ (boost::mpl::not_<Pred>::************
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                     -
  200 |       assert_not_arg( void (*)(Pred), typename assert_arg_pred_not<Pred>::type )
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  201 |     );
      |     ~                
      |     -
g++ -std=gnu++14  -I"/home/biocbuild/bbs-3.17-bioc/R/include" -DNDEBUG  -I'/home/biocbuild/bbs-3.17-bioc/R/library/Rcpp/include' -I'/home/biocbuild/bbs-3.17-bioc/R/library/BH/include' -I/usr/local/include    -fPIC  -g -O2  -Wall  -c test-runner.cpp -o test-runner.o
In file included from /usr/include/signal.h:328,
                 from Tests/catch.h:2070,
                 from test-runner.cpp:2:
Tests/catch.h:6473:33: error: size of array ‘altStackMem’ is not an integral constant-expression
 6473 |         static char altStackMem[SIGSTKSZ];
      |                                 ^~~~~~~~
Tests/catch.h:6524:45: error: size of array ‘altStackMem’ is not an integral constant-expression
 6524 |     char FatalConditionHandler::altStackMem[SIGSTKSZ] = {};
      |                                             ^~~~~~~~
make: *** [/home/biocbuild/bbs-3.17-bioc/R/etc/Makeconf:198: test-runner.o] Error 1
ERROR: compilation failed for package ‘CancerInSilico’
* removing ‘/home/biocbuild/bbs-3.17-bioc/R/library/CancerInSilico’
